// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-currencies should be able to extract en 1`] = `
Object {
  "en": Object {
    "ADP": Object {
      "displayName": Object {
        "other": "Andorran pesetas",
      },
      "narrow": "ADP",
      "symbol": "ADP",
    },
    "AED": Object {
      "displayName": Object {
        "other": "UAE dirhams",
      },
      "narrow": "AED",
      "symbol": "AED",
    },
    "AFA": Object {
      "displayName": Object {
        "other": "Afghan afghanis (1927–2002)",
      },
      "narrow": "AFA",
      "symbol": "AFA",
    },
    "AFN": Object {
      "displayName": Object {
        "other": "Afghan Afghanis",
      },
      "narrow": "AFN",
      "symbol": "AFN",
    },
    "ALK": Object {
      "displayName": Object {
        "other": "Albanian lekë (1946–1965)",
      },
      "narrow": "ALK",
      "symbol": "ALK",
    },
    "ALL": Object {
      "displayName": Object {
        "other": "Albanian lekë",
      },
      "narrow": "ALL",
      "symbol": "ALL",
    },
    "AMD": Object {
      "displayName": Object {
        "other": "Armenian drams",
      },
      "narrow": "AMD",
      "symbol": "AMD",
    },
    "ANG": Object {
      "displayName": Object {
        "other": "Netherlands Antillean guilders",
      },
      "narrow": "ANG",
      "symbol": "ANG",
    },
    "AOA": Object {
      "displayName": Object {
        "other": "Angolan kwanzas",
      },
      "narrow": "Kz",
      "symbol": "AOA",
    },
    "AOK": Object {
      "displayName": Object {
        "other": "Angolan kwanzas (1977–1991)",
      },
      "narrow": "AOK",
      "symbol": "AOK",
    },
    "AON": Object {
      "displayName": Object {
        "other": "Angolan new kwanzas (1990–2000)",
      },
      "narrow": "AON",
      "symbol": "AON",
    },
    "AOR": Object {
      "displayName": Object {
        "other": "Angolan readjusted kwanzas (1995–1999)",
      },
      "narrow": "AOR",
      "symbol": "AOR",
    },
    "ARA": Object {
      "displayName": Object {
        "other": "Argentine australs",
      },
      "narrow": "ARA",
      "symbol": "ARA",
    },
    "ARL": Object {
      "displayName": Object {
        "other": "Argentine pesos ley (1970–1983)",
      },
      "narrow": "ARL",
      "symbol": "ARL",
    },
    "ARM": Object {
      "displayName": Object {
        "other": "Argentine pesos (1881–1970)",
      },
      "narrow": "ARM",
      "symbol": "ARM",
    },
    "ARP": Object {
      "displayName": Object {
        "other": "Argentine pesos (1983–1985)",
      },
      "narrow": "ARP",
      "symbol": "ARP",
    },
    "ARS": Object {
      "displayName": Object {
        "other": "Argentine pesos",
      },
      "narrow": "$",
      "symbol": "ARS",
    },
    "ATS": Object {
      "displayName": Object {
        "other": "Austrian schillings",
      },
      "narrow": "ATS",
      "symbol": "ATS",
    },
    "AUD": Object {
      "displayName": Object {
        "other": "Australian dollars",
      },
      "narrow": "$",
      "symbol": "A$",
    },
    "AWG": Object {
      "displayName": Object {
        "other": "Aruban florin",
      },
      "narrow": "AWG",
      "symbol": "AWG",
    },
    "AZM": Object {
      "displayName": Object {
        "other": "Azerbaijani manats (1993–2006)",
      },
      "narrow": "AZM",
      "symbol": "AZM",
    },
    "AZN": Object {
      "displayName": Object {
        "other": "Azerbaijani manats",
      },
      "narrow": "AZN",
      "symbol": "AZN",
    },
    "BAD": Object {
      "displayName": Object {
        "other": "Bosnia-Herzegovina dinars (1992–1994)",
      },
      "narrow": "BAD",
      "symbol": "BAD",
    },
    "BAM": Object {
      "displayName": Object {
        "other": "Bosnia-Herzegovina convertible marks",
      },
      "narrow": "KM",
      "symbol": "BAM",
    },
    "BAN": Object {
      "displayName": Object {
        "other": "Bosnia-Herzegovina new dinars (1994–1997)",
      },
      "narrow": "BAN",
      "symbol": "BAN",
    },
    "BBD": Object {
      "displayName": Object {
        "other": "Barbadian dollars",
      },
      "narrow": "$",
      "symbol": "BBD",
    },
    "BDT": Object {
      "displayName": Object {
        "other": "Bangladeshi takas",
      },
      "narrow": "৳",
      "symbol": "BDT",
    },
    "BEC": Object {
      "displayName": Object {
        "other": "Belgian francs (convertible)",
      },
      "narrow": "BEC",
      "symbol": "BEC",
    },
    "BEF": Object {
      "displayName": Object {
        "other": "Belgian francs",
      },
      "narrow": "BEF",
      "symbol": "BEF",
    },
    "BEL": Object {
      "displayName": Object {
        "other": "Belgian francs (financial)",
      },
      "narrow": "BEL",
      "symbol": "BEL",
    },
    "BGL": Object {
      "displayName": Object {
        "other": "Bulgarian hard leva",
      },
      "narrow": "BGL",
      "symbol": "BGL",
    },
    "BGM": Object {
      "displayName": Object {
        "other": "Bulgarian socialist leva",
      },
      "narrow": "BGM",
      "symbol": "BGM",
    },
    "BGN": Object {
      "displayName": Object {
        "other": "Bulgarian leva",
      },
      "narrow": "BGN",
      "symbol": "BGN",
    },
    "BGO": Object {
      "displayName": Object {
        "other": "Bulgarian leva (1879–1952)",
      },
      "narrow": "BGO",
      "symbol": "BGO",
    },
    "BHD": Object {
      "displayName": Object {
        "other": "Bahraini dinars",
      },
      "narrow": "BHD",
      "symbol": "BHD",
    },
    "BIF": Object {
      "displayName": Object {
        "other": "Burundian francs",
      },
      "narrow": "BIF",
      "symbol": "BIF",
    },
    "BMD": Object {
      "displayName": Object {
        "other": "Bermudan dollars",
      },
      "narrow": "$",
      "symbol": "BMD",
    },
    "BND": Object {
      "displayName": Object {
        "other": "Brunei dollars",
      },
      "narrow": "$",
      "symbol": "BND",
    },
    "BOB": Object {
      "displayName": Object {
        "other": "Bolivian bolivianos",
      },
      "narrow": "Bs",
      "symbol": "BOB",
    },
    "BOL": Object {
      "displayName": Object {
        "other": "Bolivian bolivianos (1863–1963)",
      },
      "narrow": "BOL",
      "symbol": "BOL",
    },
    "BOP": Object {
      "displayName": Object {
        "other": "Bolivian pesos",
      },
      "narrow": "BOP",
      "symbol": "BOP",
    },
    "BOV": Object {
      "displayName": Object {
        "other": "Bolivian mvdols",
      },
      "narrow": "BOV",
      "symbol": "BOV",
    },
    "BRB": Object {
      "displayName": Object {
        "other": "Brazilian new cruzeiros (1967–1986)",
      },
      "narrow": "BRB",
      "symbol": "BRB",
    },
    "BRC": Object {
      "displayName": Object {
        "other": "Brazilian cruzados (1986–1989)",
      },
      "narrow": "BRC",
      "symbol": "BRC",
    },
    "BRE": Object {
      "displayName": Object {
        "other": "Brazilian cruzeiros (1990–1993)",
      },
      "narrow": "BRE",
      "symbol": "BRE",
    },
    "BRL": Object {
      "displayName": Object {
        "other": "Brazilian reals",
      },
      "narrow": "R$",
      "symbol": "R$",
    },
    "BRN": Object {
      "displayName": Object {
        "other": "Brazilian new cruzados (1989–1990)",
      },
      "narrow": "BRN",
      "symbol": "BRN",
    },
    "BRR": Object {
      "displayName": Object {
        "other": "Brazilian cruzeiros (1993–1994)",
      },
      "narrow": "BRR",
      "symbol": "BRR",
    },
    "BRZ": Object {
      "displayName": Object {
        "other": "Brazilian cruzeiros (1942–1967)",
      },
      "narrow": "BRZ",
      "symbol": "BRZ",
    },
    "BSD": Object {
      "displayName": Object {
        "other": "Bahamian dollars",
      },
      "narrow": "$",
      "symbol": "BSD",
    },
    "BTN": Object {
      "displayName": Object {
        "other": "Bhutanese ngultrums",
      },
      "narrow": "BTN",
      "symbol": "BTN",
    },
    "BUK": Object {
      "displayName": Object {
        "other": "Burmese kyats",
      },
      "narrow": "BUK",
      "symbol": "BUK",
    },
    "BWP": Object {
      "displayName": Object {
        "other": "Botswanan pulas",
      },
      "narrow": "P",
      "symbol": "BWP",
    },
    "BYB": Object {
      "displayName": Object {
        "other": "Belarusian rubles (1994–1999)",
      },
      "narrow": "BYB",
      "symbol": "BYB",
    },
    "BYN": Object {
      "displayName": Object {
        "other": "Belarusian rubles",
      },
      "narrow": "р.",
      "symbol": "BYN",
    },
    "BYR": Object {
      "displayName": Object {
        "other": "Belarusian rubles (2000–2016)",
      },
      "narrow": "BYR",
      "symbol": "BYR",
    },
    "BZD": Object {
      "displayName": Object {
        "other": "Belize dollars",
      },
      "narrow": "$",
      "symbol": "BZD",
    },
    "CAD": Object {
      "displayName": Object {
        "other": "Canadian dollars",
      },
      "narrow": "$",
      "symbol": "CA$",
    },
    "CDF": Object {
      "displayName": Object {
        "other": "Congolese francs",
      },
      "narrow": "CDF",
      "symbol": "CDF",
    },
    "CHE": Object {
      "displayName": Object {
        "other": "WIR euros",
      },
      "narrow": "CHE",
      "symbol": "CHE",
    },
    "CHF": Object {
      "displayName": Object {
        "other": "Swiss francs",
      },
      "narrow": "CHF",
      "symbol": "CHF",
    },
    "CHW": Object {
      "displayName": Object {
        "other": "WIR francs",
      },
      "narrow": "CHW",
      "symbol": "CHW",
    },
    "CLE": Object {
      "displayName": Object {
        "other": "Chilean escudos",
      },
      "narrow": "CLE",
      "symbol": "CLE",
    },
    "CLF": Object {
      "displayName": Object {
        "other": "Chilean units of account (UF)",
      },
      "narrow": "CLF",
      "symbol": "CLF",
    },
    "CLP": Object {
      "displayName": Object {
        "other": "Chilean pesos",
      },
      "narrow": "$",
      "symbol": "CLP",
    },
    "CNH": Object {
      "displayName": Object {
        "other": "Chinese yuan (offshore)",
      },
      "narrow": "CNH",
      "symbol": "CNH",
    },
    "CNX": Object {
      "displayName": Object {
        "other": "Chinese People’s Bank dollars",
      },
      "narrow": "CNX",
      "symbol": "CNX",
    },
    "CNY": Object {
      "displayName": Object {
        "other": "Chinese yuan",
      },
      "narrow": "¥",
      "symbol": "CN¥",
    },
    "COP": Object {
      "displayName": Object {
        "other": "Colombian pesos",
      },
      "narrow": "$",
      "symbol": "COP",
    },
    "COU": Object {
      "displayName": Object {
        "other": "Colombian real value units",
      },
      "narrow": "COU",
      "symbol": "COU",
    },
    "CRC": Object {
      "displayName": Object {
        "other": "Costa Rican colóns",
      },
      "narrow": "₡",
      "symbol": "CRC",
    },
    "CSD": Object {
      "displayName": Object {
        "other": "Serbian dinars (2002–2006)",
      },
      "narrow": "CSD",
      "symbol": "CSD",
    },
    "CSK": Object {
      "displayName": Object {
        "other": "Czechoslovak hard korunas",
      },
      "narrow": "CSK",
      "symbol": "CSK",
    },
    "CUC": Object {
      "displayName": Object {
        "other": "Cuban convertible pesos",
      },
      "narrow": "$",
      "symbol": "CUC",
    },
    "CUP": Object {
      "displayName": Object {
        "other": "Cuban pesos",
      },
      "narrow": "$",
      "symbol": "CUP",
    },
    "CVE": Object {
      "displayName": Object {
        "other": "Cape Verdean escudos",
      },
      "narrow": "CVE",
      "symbol": "CVE",
    },
    "CYP": Object {
      "displayName": Object {
        "other": "Cypriot pounds",
      },
      "narrow": "CYP",
      "symbol": "CYP",
    },
    "CZK": Object {
      "displayName": Object {
        "other": "Czech korunas",
      },
      "narrow": "Kč",
      "symbol": "CZK",
    },
    "DDM": Object {
      "displayName": Object {
        "other": "East German marks",
      },
      "narrow": "DDM",
      "symbol": "DDM",
    },
    "DEM": Object {
      "displayName": Object {
        "other": "German marks",
      },
      "narrow": "DEM",
      "symbol": "DEM",
    },
    "DJF": Object {
      "displayName": Object {
        "other": "Djiboutian francs",
      },
      "narrow": "DJF",
      "symbol": "DJF",
    },
    "DKK": Object {
      "displayName": Object {
        "other": "Danish kroner",
      },
      "narrow": "kr",
      "symbol": "DKK",
    },
    "DOP": Object {
      "displayName": Object {
        "other": "Dominican pesos",
      },
      "narrow": "$",
      "symbol": "DOP",
    },
    "DZD": Object {
      "displayName": Object {
        "other": "Algerian dinars",
      },
      "narrow": "DZD",
      "symbol": "DZD",
    },
    "ECS": Object {
      "displayName": Object {
        "other": "Ecuadorian sucres",
      },
      "narrow": "ECS",
      "symbol": "ECS",
    },
    "ECV": Object {
      "displayName": Object {
        "other": "Ecuadorian units of constant value",
      },
      "narrow": "ECV",
      "symbol": "ECV",
    },
    "EEK": Object {
      "displayName": Object {
        "other": "Estonian kroons",
      },
      "narrow": "EEK",
      "symbol": "EEK",
    },
    "EGP": Object {
      "displayName": Object {
        "other": "Egyptian pounds",
      },
      "narrow": "E£",
      "symbol": "EGP",
    },
    "ERN": Object {
      "displayName": Object {
        "other": "Eritrean nakfas",
      },
      "narrow": "ERN",
      "symbol": "ERN",
    },
    "ESA": Object {
      "displayName": Object {
        "other": "Spanish pesetas (A account)",
      },
      "narrow": "ESA",
      "symbol": "ESA",
    },
    "ESB": Object {
      "displayName": Object {
        "other": "Spanish pesetas (convertible account)",
      },
      "narrow": "ESB",
      "symbol": "ESB",
    },
    "ESP": Object {
      "displayName": Object {
        "other": "Spanish pesetas",
      },
      "narrow": "₧",
      "symbol": "ESP",
    },
    "ETB": Object {
      "displayName": Object {
        "other": "Ethiopian birrs",
      },
      "narrow": "ETB",
      "symbol": "ETB",
    },
    "EUR": Object {
      "displayName": Object {
        "other": "euros",
      },
      "narrow": "€",
      "symbol": "€",
    },
    "FIM": Object {
      "displayName": Object {
        "other": "Finnish markkas",
      },
      "narrow": "FIM",
      "symbol": "FIM",
    },
    "FJD": Object {
      "displayName": Object {
        "other": "Fijian dollars",
      },
      "narrow": "$",
      "symbol": "FJD",
    },
    "FKP": Object {
      "displayName": Object {
        "other": "Falkland Islands pounds",
      },
      "narrow": "£",
      "symbol": "FKP",
    },
    "FRF": Object {
      "displayName": Object {
        "other": "French francs",
      },
      "narrow": "FRF",
      "symbol": "FRF",
    },
    "GBP": Object {
      "displayName": Object {
        "other": "British pounds",
      },
      "narrow": "£",
      "symbol": "£",
    },
    "GEK": Object {
      "displayName": Object {
        "other": "Georgian kupon larits",
      },
      "narrow": "GEK",
      "symbol": "GEK",
    },
    "GEL": Object {
      "displayName": Object {
        "other": "Georgian laris",
      },
      "narrow": "₾",
      "symbol": "GEL",
    },
    "GHC": Object {
      "displayName": Object {
        "other": "Ghanaian cedis (1979–2007)",
      },
      "narrow": "GHC",
      "symbol": "GHC",
    },
    "GHS": Object {
      "displayName": Object {
        "other": "Ghanaian cedis",
      },
      "narrow": "GHS",
      "symbol": "GHS",
    },
    "GIP": Object {
      "displayName": Object {
        "other": "Gibraltar pounds",
      },
      "narrow": "£",
      "symbol": "GIP",
    },
    "GMD": Object {
      "displayName": Object {
        "other": "Gambian dalasis",
      },
      "narrow": "GMD",
      "symbol": "GMD",
    },
    "GNF": Object {
      "displayName": Object {
        "other": "Guinean francs",
      },
      "narrow": "FG",
      "symbol": "GNF",
    },
    "GNS": Object {
      "displayName": Object {
        "other": "Guinean sylis",
      },
      "narrow": "GNS",
      "symbol": "GNS",
    },
    "GQE": Object {
      "displayName": Object {
        "other": "Equatorial Guinean ekwele",
      },
      "narrow": "GQE",
      "symbol": "GQE",
    },
    "GRD": Object {
      "displayName": Object {
        "other": "Greek drachmas",
      },
      "narrow": "GRD",
      "symbol": "GRD",
    },
    "GTQ": Object {
      "displayName": Object {
        "other": "Guatemalan quetzals",
      },
      "narrow": "Q",
      "symbol": "GTQ",
    },
    "GWE": Object {
      "displayName": Object {
        "other": "Portuguese Guinea escudos",
      },
      "narrow": "GWE",
      "symbol": "GWE",
    },
    "GWP": Object {
      "displayName": Object {
        "other": "Guinea-Bissau pesos",
      },
      "narrow": "GWP",
      "symbol": "GWP",
    },
    "GYD": Object {
      "displayName": Object {
        "other": "Guyanaese dollars",
      },
      "narrow": "$",
      "symbol": "GYD",
    },
    "HKD": Object {
      "displayName": Object {
        "other": "Hong Kong dollars",
      },
      "narrow": "$",
      "symbol": "HK$",
    },
    "HNL": Object {
      "displayName": Object {
        "other": "Honduran lempiras",
      },
      "narrow": "L",
      "symbol": "HNL",
    },
    "HRD": Object {
      "displayName": Object {
        "other": "Croatian dinars",
      },
      "narrow": "HRD",
      "symbol": "HRD",
    },
    "HRK": Object {
      "displayName": Object {
        "other": "Croatian kunas",
      },
      "narrow": "kn",
      "symbol": "HRK",
    },
    "HTG": Object {
      "displayName": Object {
        "other": "Haitian gourdes",
      },
      "narrow": "HTG",
      "symbol": "HTG",
    },
    "HUF": Object {
      "displayName": Object {
        "other": "Hungarian forints",
      },
      "narrow": "Ft",
      "symbol": "HUF",
    },
    "IDR": Object {
      "displayName": Object {
        "other": "Indonesian rupiahs",
      },
      "narrow": "Rp",
      "symbol": "IDR",
    },
    "IEP": Object {
      "displayName": Object {
        "other": "Irish pounds",
      },
      "narrow": "IEP",
      "symbol": "IEP",
    },
    "ILP": Object {
      "displayName": Object {
        "other": "Israeli pounds",
      },
      "narrow": "ILP",
      "symbol": "ILP",
    },
    "ILR": Object {
      "displayName": Object {
        "other": "Israeli shekels (1980–1985)",
      },
      "narrow": "ILR",
      "symbol": "ILR",
    },
    "ILS": Object {
      "displayName": Object {
        "other": "Israeli new shekels",
      },
      "narrow": "₪",
      "symbol": "₪",
    },
    "INR": Object {
      "displayName": Object {
        "other": "Indian rupees",
      },
      "narrow": "₹",
      "symbol": "₹",
    },
    "IQD": Object {
      "displayName": Object {
        "other": "Iraqi dinars",
      },
      "narrow": "IQD",
      "symbol": "IQD",
    },
    "IRR": Object {
      "displayName": Object {
        "other": "Iranian rials",
      },
      "narrow": "IRR",
      "symbol": "IRR",
    },
    "ISJ": Object {
      "displayName": Object {
        "other": "Icelandic krónur (1918–1981)",
      },
      "narrow": "ISJ",
      "symbol": "ISJ",
    },
    "ISK": Object {
      "displayName": Object {
        "other": "Icelandic krónur",
      },
      "narrow": "kr",
      "symbol": "ISK",
    },
    "ITL": Object {
      "displayName": Object {
        "other": "Italian liras",
      },
      "narrow": "ITL",
      "symbol": "ITL",
    },
    "JMD": Object {
      "displayName": Object {
        "other": "Jamaican dollars",
      },
      "narrow": "$",
      "symbol": "JMD",
    },
    "JOD": Object {
      "displayName": Object {
        "other": "Jordanian dinars",
      },
      "narrow": "JOD",
      "symbol": "JOD",
    },
    "JPY": Object {
      "displayName": Object {
        "other": "Japanese yen",
      },
      "narrow": "¥",
      "symbol": "¥",
    },
    "KES": Object {
      "displayName": Object {
        "other": "Kenyan shillings",
      },
      "narrow": "KES",
      "symbol": "KES",
    },
    "KGS": Object {
      "displayName": Object {
        "other": "Kyrgystani soms",
      },
      "narrow": "KGS",
      "symbol": "KGS",
    },
    "KHR": Object {
      "displayName": Object {
        "other": "Cambodian riels",
      },
      "narrow": "៛",
      "symbol": "KHR",
    },
    "KMF": Object {
      "displayName": Object {
        "other": "Comorian francs",
      },
      "narrow": "CF",
      "symbol": "KMF",
    },
    "KPW": Object {
      "displayName": Object {
        "other": "North Korean won",
      },
      "narrow": "₩",
      "symbol": "KPW",
    },
    "KRH": Object {
      "displayName": Object {
        "other": "South Korean hwan (1953–1962)",
      },
      "narrow": "KRH",
      "symbol": "KRH",
    },
    "KRO": Object {
      "displayName": Object {
        "other": "South Korean won (1945–1953)",
      },
      "narrow": "KRO",
      "symbol": "KRO",
    },
    "KRW": Object {
      "displayName": Object {
        "other": "South Korean won",
      },
      "narrow": "₩",
      "symbol": "₩",
    },
    "KWD": Object {
      "displayName": Object {
        "other": "Kuwaiti dinars",
      },
      "narrow": "KWD",
      "symbol": "KWD",
    },
    "KYD": Object {
      "displayName": Object {
        "other": "Cayman Islands dollars",
      },
      "narrow": "$",
      "symbol": "KYD",
    },
    "KZT": Object {
      "displayName": Object {
        "other": "Kazakhstani tenges",
      },
      "narrow": "₸",
      "symbol": "KZT",
    },
    "LAK": Object {
      "displayName": Object {
        "other": "Laotian kips",
      },
      "narrow": "₭",
      "symbol": "LAK",
    },
    "LBP": Object {
      "displayName": Object {
        "other": "Lebanese pounds",
      },
      "narrow": "L£",
      "symbol": "LBP",
    },
    "LKR": Object {
      "displayName": Object {
        "other": "Sri Lankan rupees",
      },
      "narrow": "Rs",
      "symbol": "LKR",
    },
    "LRD": Object {
      "displayName": Object {
        "other": "Liberian dollars",
      },
      "narrow": "$",
      "symbol": "LRD",
    },
    "LSL": Object {
      "displayName": Object {
        "other": "Lesotho lotis",
      },
      "narrow": "LSL",
      "symbol": "LSL",
    },
    "LTL": Object {
      "displayName": Object {
        "other": "Lithuanian litai",
      },
      "narrow": "Lt",
      "symbol": "LTL",
    },
    "LTT": Object {
      "displayName": Object {
        "other": "Lithuanian talonases",
      },
      "narrow": "LTT",
      "symbol": "LTT",
    },
    "LUC": Object {
      "displayName": Object {
        "other": "Luxembourgian convertible francs",
      },
      "narrow": "LUC",
      "symbol": "LUC",
    },
    "LUF": Object {
      "displayName": Object {
        "other": "Luxembourgian francs",
      },
      "narrow": "LUF",
      "symbol": "LUF",
    },
    "LUL": Object {
      "displayName": Object {
        "other": "Luxembourg financial francs",
      },
      "narrow": "LUL",
      "symbol": "LUL",
    },
    "LVL": Object {
      "displayName": Object {
        "other": "Latvian lati",
      },
      "narrow": "Ls",
      "symbol": "LVL",
    },
    "LVR": Object {
      "displayName": Object {
        "other": "Latvian rubles",
      },
      "narrow": "LVR",
      "symbol": "LVR",
    },
    "LYD": Object {
      "displayName": Object {
        "other": "Libyan dinars",
      },
      "narrow": "LYD",
      "symbol": "LYD",
    },
    "MAD": Object {
      "displayName": Object {
        "other": "Moroccan dirhams",
      },
      "narrow": "MAD",
      "symbol": "MAD",
    },
    "MAF": Object {
      "displayName": Object {
        "other": "Moroccan francs",
      },
      "narrow": "MAF",
      "symbol": "MAF",
    },
    "MCF": Object {
      "displayName": Object {
        "other": "Monegasque francs",
      },
      "narrow": "MCF",
      "symbol": "MCF",
    },
    "MDC": Object {
      "displayName": Object {
        "other": "Moldovan cupon",
      },
      "narrow": "MDC",
      "symbol": "MDC",
    },
    "MDL": Object {
      "displayName": Object {
        "other": "Moldovan lei",
      },
      "narrow": "MDL",
      "symbol": "MDL",
    },
    "MGA": Object {
      "displayName": Object {
        "other": "Malagasy ariaries",
      },
      "narrow": "Ar",
      "symbol": "MGA",
    },
    "MGF": Object {
      "displayName": Object {
        "other": "Malagasy francs",
      },
      "narrow": "MGF",
      "symbol": "MGF",
    },
    "MKD": Object {
      "displayName": Object {
        "other": "Macedonian denari",
      },
      "narrow": "MKD",
      "symbol": "MKD",
    },
    "MKN": Object {
      "displayName": Object {
        "other": "Macedonian denari (1992–1993)",
      },
      "narrow": "MKN",
      "symbol": "MKN",
    },
    "MLF": Object {
      "displayName": Object {
        "other": "Malian francs",
      },
      "narrow": "MLF",
      "symbol": "MLF",
    },
    "MMK": Object {
      "displayName": Object {
        "other": "Myanmar kyats",
      },
      "narrow": "K",
      "symbol": "MMK",
    },
    "MNT": Object {
      "displayName": Object {
        "other": "Mongolian tugriks",
      },
      "narrow": "₮",
      "symbol": "MNT",
    },
    "MOP": Object {
      "displayName": Object {
        "other": "Macanese patacas",
      },
      "narrow": "MOP",
      "symbol": "MOP",
    },
    "MRO": Object {
      "displayName": Object {
        "other": "Mauritanian ouguiyas (1973–2017)",
      },
      "narrow": "MRO",
      "symbol": "MRO",
    },
    "MRU": Object {
      "displayName": Object {
        "other": "Mauritanian ouguiyas",
      },
      "narrow": "MRU",
      "symbol": "MRU",
    },
    "MTL": Object {
      "displayName": Object {
        "other": "Maltese lira",
      },
      "narrow": "MTL",
      "symbol": "MTL",
    },
    "MTP": Object {
      "displayName": Object {
        "other": "Maltese pounds",
      },
      "narrow": "MTP",
      "symbol": "MTP",
    },
    "MUR": Object {
      "displayName": Object {
        "other": "Mauritian rupees",
      },
      "narrow": "Rs",
      "symbol": "MUR",
    },
    "MVP": Object {
      "displayName": Object {
        "other": "Maldivian rupees (1947–1981)",
      },
      "narrow": "MVP",
      "symbol": "MVP",
    },
    "MVR": Object {
      "displayName": Object {
        "other": "Maldivian rufiyaas",
      },
      "narrow": "MVR",
      "symbol": "MVR",
    },
    "MWK": Object {
      "displayName": Object {
        "other": "Malawian kwachas",
      },
      "narrow": "MWK",
      "symbol": "MWK",
    },
    "MXN": Object {
      "displayName": Object {
        "other": "Mexican pesos",
      },
      "narrow": "$",
      "symbol": "MX$",
    },
    "MXP": Object {
      "displayName": Object {
        "other": "Mexican silver pesos (1861–1992)",
      },
      "narrow": "MXP",
      "symbol": "MXP",
    },
    "MXV": Object {
      "displayName": Object {
        "other": "Mexican investment units",
      },
      "narrow": "MXV",
      "symbol": "MXV",
    },
    "MYR": Object {
      "displayName": Object {
        "other": "Malaysian ringgits",
      },
      "narrow": "RM",
      "symbol": "MYR",
    },
    "MZE": Object {
      "displayName": Object {
        "other": "Mozambican escudos",
      },
      "narrow": "MZE",
      "symbol": "MZE",
    },
    "MZM": Object {
      "displayName": Object {
        "other": "Mozambican meticals (1980–2006)",
      },
      "narrow": "MZM",
      "symbol": "MZM",
    },
    "MZN": Object {
      "displayName": Object {
        "other": "Mozambican meticals",
      },
      "narrow": "MZN",
      "symbol": "MZN",
    },
    "NAD": Object {
      "displayName": Object {
        "other": "Namibian dollars",
      },
      "narrow": "$",
      "symbol": "NAD",
    },
    "NGN": Object {
      "displayName": Object {
        "other": "Nigerian nairas",
      },
      "narrow": "₦",
      "symbol": "NGN",
    },
    "NIC": Object {
      "displayName": Object {
        "other": "Nicaraguan córdobas (1988–1991)",
      },
      "narrow": "NIC",
      "symbol": "NIC",
    },
    "NIO": Object {
      "displayName": Object {
        "other": "Nicaraguan córdobas",
      },
      "narrow": "C$",
      "symbol": "NIO",
    },
    "NLG": Object {
      "displayName": Object {
        "other": "Dutch guilders",
      },
      "narrow": "NLG",
      "symbol": "NLG",
    },
    "NOK": Object {
      "displayName": Object {
        "other": "Norwegian kroner",
      },
      "narrow": "kr",
      "symbol": "NOK",
    },
    "NPR": Object {
      "displayName": Object {
        "other": "Nepalese rupees",
      },
      "narrow": "Rs",
      "symbol": "NPR",
    },
    "NZD": Object {
      "displayName": Object {
        "other": "New Zealand dollars",
      },
      "narrow": "$",
      "symbol": "NZ$",
    },
    "OMR": Object {
      "displayName": Object {
        "other": "Omani rials",
      },
      "narrow": "OMR",
      "symbol": "OMR",
    },
    "PAB": Object {
      "displayName": Object {
        "other": "Panamanian balboas",
      },
      "narrow": "PAB",
      "symbol": "PAB",
    },
    "PEI": Object {
      "displayName": Object {
        "other": "Peruvian intis",
      },
      "narrow": "PEI",
      "symbol": "PEI",
    },
    "PEN": Object {
      "displayName": Object {
        "other": "Peruvian soles",
      },
      "narrow": "PEN",
      "symbol": "PEN",
    },
    "PES": Object {
      "displayName": Object {
        "other": "Peruvian soles (1863–1965)",
      },
      "narrow": "PES",
      "symbol": "PES",
    },
    "PGK": Object {
      "displayName": Object {
        "other": "Papua New Guinean kina",
      },
      "narrow": "PGK",
      "symbol": "PGK",
    },
    "PHP": Object {
      "displayName": Object {
        "other": "Philippine pisos",
      },
      "narrow": "₱",
      "symbol": "PHP",
    },
    "PKR": Object {
      "displayName": Object {
        "other": "Pakistani rupees",
      },
      "narrow": "Rs",
      "symbol": "PKR",
    },
    "PLN": Object {
      "displayName": Object {
        "other": "Polish zlotys",
      },
      "narrow": "zł",
      "symbol": "PLN",
    },
    "PLZ": Object {
      "displayName": Object {
        "other": "Polish zlotys (PLZ)",
      },
      "narrow": "PLZ",
      "symbol": "PLZ",
    },
    "PTE": Object {
      "displayName": Object {
        "other": "Portuguese escudos",
      },
      "narrow": "PTE",
      "symbol": "PTE",
    },
    "PYG": Object {
      "displayName": Object {
        "other": "Paraguayan guaranis",
      },
      "narrow": "₲",
      "symbol": "PYG",
    },
    "QAR": Object {
      "displayName": Object {
        "other": "Qatari rials",
      },
      "narrow": "QAR",
      "symbol": "QAR",
    },
    "RHD": Object {
      "displayName": Object {
        "other": "Rhodesian dollars",
      },
      "narrow": "RHD",
      "symbol": "RHD",
    },
    "ROL": Object {
      "displayName": Object {
        "other": "Romanian Lei (1952–2006)",
      },
      "narrow": "ROL",
      "symbol": "ROL",
    },
    "RON": Object {
      "displayName": Object {
        "other": "Romanian lei",
      },
      "narrow": "lei",
      "symbol": "RON",
    },
    "RSD": Object {
      "displayName": Object {
        "other": "Serbian dinars",
      },
      "narrow": "RSD",
      "symbol": "RSD",
    },
    "RUB": Object {
      "displayName": Object {
        "other": "Russian rubles",
      },
      "narrow": "₽",
      "symbol": "RUB",
    },
    "RUR": Object {
      "displayName": Object {
        "other": "Russian rubles (1991–1998)",
      },
      "narrow": "р.",
      "symbol": "RUR",
    },
    "RWF": Object {
      "displayName": Object {
        "other": "Rwandan francs",
      },
      "narrow": "RF",
      "symbol": "RWF",
    },
    "SAR": Object {
      "displayName": Object {
        "other": "Saudi riyals",
      },
      "narrow": "SAR",
      "symbol": "SAR",
    },
    "SBD": Object {
      "displayName": Object {
        "other": "Solomon Islands dollars",
      },
      "narrow": "$",
      "symbol": "SBD",
    },
    "SCR": Object {
      "displayName": Object {
        "other": "Seychellois rupees",
      },
      "narrow": "SCR",
      "symbol": "SCR",
    },
    "SDD": Object {
      "displayName": Object {
        "other": "Sudanese dinars (1992–2007)",
      },
      "narrow": "SDD",
      "symbol": "SDD",
    },
    "SDG": Object {
      "displayName": Object {
        "other": "Sudanese pounds",
      },
      "narrow": "SDG",
      "symbol": "SDG",
    },
    "SDP": Object {
      "displayName": Object {
        "other": "Sudanese pounds (1957–1998)",
      },
      "narrow": "SDP",
      "symbol": "SDP",
    },
    "SEK": Object {
      "displayName": Object {
        "other": "Swedish kronor",
      },
      "narrow": "kr",
      "symbol": "SEK",
    },
    "SGD": Object {
      "displayName": Object {
        "other": "Singapore dollars",
      },
      "narrow": "$",
      "symbol": "SGD",
    },
    "SHP": Object {
      "displayName": Object {
        "other": "St. Helena pounds",
      },
      "narrow": "£",
      "symbol": "SHP",
    },
    "SIT": Object {
      "displayName": Object {
        "other": "Slovenian tolars",
      },
      "narrow": "SIT",
      "symbol": "SIT",
    },
    "SKK": Object {
      "displayName": Object {
        "other": "Slovak korunas",
      },
      "narrow": "SKK",
      "symbol": "SKK",
    },
    "SLL": Object {
      "displayName": Object {
        "other": "Sierra Leonean leones",
      },
      "narrow": "SLL",
      "symbol": "SLL",
    },
    "SOS": Object {
      "displayName": Object {
        "other": "Somali shillings",
      },
      "narrow": "SOS",
      "symbol": "SOS",
    },
    "SRD": Object {
      "displayName": Object {
        "other": "Surinamese dollars",
      },
      "narrow": "$",
      "symbol": "SRD",
    },
    "SRG": Object {
      "displayName": Object {
        "other": "Surinamese guilders",
      },
      "narrow": "SRG",
      "symbol": "SRG",
    },
    "SSP": Object {
      "displayName": Object {
        "other": "South Sudanese pounds",
      },
      "narrow": "£",
      "symbol": "SSP",
    },
    "STD": Object {
      "displayName": Object {
        "other": "São Tomé & Príncipe dobras (1977–2017)",
      },
      "narrow": "STD",
      "symbol": "STD",
    },
    "STN": Object {
      "displayName": Object {
        "other": "São Tomé & Príncipe dobras",
      },
      "narrow": "Db",
      "symbol": "STN",
    },
    "SUR": Object {
      "displayName": Object {
        "other": "Soviet roubles",
      },
      "narrow": "SUR",
      "symbol": "SUR",
    },
    "SVC": Object {
      "displayName": Object {
        "other": "Salvadoran colones",
      },
      "narrow": "SVC",
      "symbol": "SVC",
    },
    "SYP": Object {
      "displayName": Object {
        "other": "Syrian pounds",
      },
      "narrow": "£",
      "symbol": "SYP",
    },
    "SZL": Object {
      "displayName": Object {
        "other": "Swazi emalangeni",
      },
      "narrow": "SZL",
      "symbol": "SZL",
    },
    "THB": Object {
      "displayName": Object {
        "other": "Thai baht",
      },
      "narrow": "฿",
      "symbol": "THB",
    },
    "TJR": Object {
      "displayName": Object {
        "other": "Tajikistani rubles",
      },
      "narrow": "TJR",
      "symbol": "TJR",
    },
    "TJS": Object {
      "displayName": Object {
        "other": "Tajikistani somonis",
      },
      "narrow": "TJS",
      "symbol": "TJS",
    },
    "TMM": Object {
      "displayName": Object {
        "other": "Turkmenistani manat (1993–2009)",
      },
      "narrow": "TMM",
      "symbol": "TMM",
    },
    "TMT": Object {
      "displayName": Object {
        "other": "Turkmenistani manat",
      },
      "narrow": "TMT",
      "symbol": "TMT",
    },
    "TND": Object {
      "displayName": Object {
        "other": "Tunisian dinars",
      },
      "narrow": "TND",
      "symbol": "TND",
    },
    "TOP": Object {
      "displayName": Object {
        "other": "Tongan paʻanga",
      },
      "narrow": "T$",
      "symbol": "TOP",
    },
    "TPE": Object {
      "displayName": Object {
        "other": "Timorese escudos",
      },
      "narrow": "TPE",
      "symbol": "TPE",
    },
    "TRL": Object {
      "displayName": Object {
        "other": "Turkish Lira (1922–2005)",
      },
      "narrow": "TRL",
      "symbol": "TRL",
    },
    "TRY": Object {
      "displayName": Object {
        "other": "Turkish Lira",
      },
      "narrow": "₺",
      "symbol": "TRY",
    },
    "TTD": Object {
      "displayName": Object {
        "other": "Trinidad & Tobago dollars",
      },
      "narrow": "$",
      "symbol": "TTD",
    },
    "TWD": Object {
      "displayName": Object {
        "other": "New Taiwan dollars",
      },
      "narrow": "$",
      "symbol": "NT$",
    },
    "TZS": Object {
      "displayName": Object {
        "other": "Tanzanian shillings",
      },
      "narrow": "TZS",
      "symbol": "TZS",
    },
    "UAH": Object {
      "displayName": Object {
        "other": "Ukrainian hryvnias",
      },
      "narrow": "₴",
      "symbol": "UAH",
    },
    "UAK": Object {
      "displayName": Object {
        "other": "Ukrainian karbovantsiv",
      },
      "narrow": "UAK",
      "symbol": "UAK",
    },
    "UGS": Object {
      "displayName": Object {
        "other": "Ugandan shillings (1966–1987)",
      },
      "narrow": "UGS",
      "symbol": "UGS",
    },
    "UGX": Object {
      "displayName": Object {
        "other": "Ugandan shillings",
      },
      "narrow": "UGX",
      "symbol": "UGX",
    },
    "USD": Object {
      "displayName": Object {
        "other": "US dollars",
      },
      "narrow": "$",
      "symbol": "$",
    },
    "USN": Object {
      "displayName": Object {
        "other": "US dollars (next day)",
      },
      "narrow": "USN",
      "symbol": "USN",
    },
    "USS": Object {
      "displayName": Object {
        "other": "US dollars (same day)",
      },
      "narrow": "USS",
      "symbol": "USS",
    },
    "UYI": Object {
      "displayName": Object {
        "other": "Uruguayan pesos (indexed units)",
      },
      "narrow": "UYI",
      "symbol": "UYI",
    },
    "UYP": Object {
      "displayName": Object {
        "other": "Uruguayan pesos (1975–1993)",
      },
      "narrow": "UYP",
      "symbol": "UYP",
    },
    "UYU": Object {
      "displayName": Object {
        "other": "Uruguayan pesos",
      },
      "narrow": "$",
      "symbol": "UYU",
    },
    "UYW": Object {
      "displayName": Object {
        "other": "Uruguayan nominal wage index units",
      },
      "narrow": "UYW",
      "symbol": "UYW",
    },
    "UZS": Object {
      "displayName": Object {
        "other": "Uzbekistani som",
      },
      "narrow": "UZS",
      "symbol": "UZS",
    },
    "VEB": Object {
      "displayName": Object {
        "other": "Venezuelan bolívars (1871–2008)",
      },
      "narrow": "VEB",
      "symbol": "VEB",
    },
    "VEF": Object {
      "displayName": Object {
        "other": "Venezuelan bolívars (2008–2018)",
      },
      "narrow": "Bs",
      "symbol": "VEF",
    },
    "VES": Object {
      "displayName": Object {
        "other": "Venezuelan bolívars",
      },
      "narrow": "VES",
      "symbol": "VES",
    },
    "VND": Object {
      "displayName": Object {
        "other": "Vietnamese dong",
      },
      "narrow": "₫",
      "symbol": "₫",
    },
    "VNN": Object {
      "displayName": Object {
        "other": "Vietnamese dong (1978–1985)",
      },
      "narrow": "VNN",
      "symbol": "VNN",
    },
    "VUV": Object {
      "displayName": Object {
        "other": "Vanuatu vatus",
      },
      "narrow": "VUV",
      "symbol": "VUV",
    },
    "WST": Object {
      "displayName": Object {
        "other": "Samoan tala",
      },
      "narrow": "WST",
      "symbol": "WST",
    },
    "XAF": Object {
      "displayName": Object {
        "other": "Central African CFA francs",
      },
      "narrow": "FCFA",
      "symbol": "FCFA",
    },
    "XAG": Object {
      "displayName": Object {
        "other": "troy ounces of silver",
      },
      "narrow": "XAG",
      "symbol": "XAG",
    },
    "XAU": Object {
      "displayName": Object {
        "other": "troy ounces of gold",
      },
      "narrow": "XAU",
      "symbol": "XAU",
    },
    "XBA": Object {
      "displayName": Object {
        "other": "European composite units",
      },
      "narrow": "XBA",
      "symbol": "XBA",
    },
    "XBB": Object {
      "displayName": Object {
        "other": "European monetary units",
      },
      "narrow": "XBB",
      "symbol": "XBB",
    },
    "XBC": Object {
      "displayName": Object {
        "other": "European units of account (XBC)",
      },
      "narrow": "XBC",
      "symbol": "XBC",
    },
    "XBD": Object {
      "displayName": Object {
        "other": "European units of account (XBD)",
      },
      "narrow": "XBD",
      "symbol": "XBD",
    },
    "XCD": Object {
      "displayName": Object {
        "other": "East Caribbean dollars",
      },
      "narrow": "$",
      "symbol": "EC$",
    },
    "XDR": Object {
      "displayName": Object {
        "other": "special drawing rights",
      },
      "narrow": "XDR",
      "symbol": "XDR",
    },
    "XEU": Object {
      "displayName": Object {
        "other": "European currency units",
      },
      "narrow": "XEU",
      "symbol": "XEU",
    },
    "XFO": Object {
      "displayName": Object {
        "other": "French gold francs",
      },
      "narrow": "XFO",
      "symbol": "XFO",
    },
    "XFU": Object {
      "displayName": Object {
        "other": "French UIC-francs",
      },
      "narrow": "XFU",
      "symbol": "XFU",
    },
    "XOF": Object {
      "displayName": Object {
        "other": "West African CFA francs",
      },
      "narrow": "CFA",
      "symbol": "CFA",
    },
    "XPD": Object {
      "displayName": Object {
        "other": "troy ounces of palladium",
      },
      "narrow": "XPD",
      "symbol": "XPD",
    },
    "XPF": Object {
      "displayName": Object {
        "other": "CFP francs",
      },
      "narrow": "CFPF",
      "symbol": "CFPF",
    },
    "XPT": Object {
      "displayName": Object {
        "other": "troy ounces of platinum",
      },
      "narrow": "XPT",
      "symbol": "XPT",
    },
    "XRE": Object {
      "displayName": Object {
        "other": "RINET Funds units",
      },
      "narrow": "XRE",
      "symbol": "XRE",
    },
    "XSU": Object {
      "displayName": Object {
        "other": "Sucres",
      },
      "narrow": "XSU",
      "symbol": "XSU",
    },
    "XTS": Object {
      "displayName": Object {
        "other": "Testing Currency units",
      },
      "narrow": "XTS",
      "symbol": "XTS",
    },
    "XUA": Object {
      "displayName": Object {
        "other": "ADB units of account",
      },
      "narrow": "XUA",
      "symbol": "XUA",
    },
    "XXX": Object {
      "displayName": Object {
        "other": "(unknown currency)",
      },
      "narrow": "¤",
      "symbol": "¤",
    },
    "YDD": Object {
      "displayName": Object {
        "other": "Yemeni dinars",
      },
      "narrow": "YDD",
      "symbol": "YDD",
    },
    "YER": Object {
      "displayName": Object {
        "other": "Yemeni rials",
      },
      "narrow": "YER",
      "symbol": "YER",
    },
    "YUD": Object {
      "displayName": Object {
        "other": "Yugoslavian hard dinars (1966–1990)",
      },
      "narrow": "YUD",
      "symbol": "YUD",
    },
    "YUM": Object {
      "displayName": Object {
        "other": "Yugoslavian new dinars (1994–2002)",
      },
      "narrow": "YUM",
      "symbol": "YUM",
    },
    "YUN": Object {
      "displayName": Object {
        "other": "Yugoslavian convertible dinars (1990–1992)",
      },
      "narrow": "YUN",
      "symbol": "YUN",
    },
    "YUR": Object {
      "displayName": Object {
        "other": "Yugoslavian reformed dinars (1992–1993)",
      },
      "narrow": "YUR",
      "symbol": "YUR",
    },
    "ZAL": Object {
      "displayName": Object {
        "other": "South African rands (financial)",
      },
      "narrow": "ZAL",
      "symbol": "ZAL",
    },
    "ZAR": Object {
      "displayName": Object {
        "other": "South African rand",
      },
      "narrow": "R",
      "symbol": "ZAR",
    },
    "ZMK": Object {
      "displayName": Object {
        "other": "Zambian kwachas (1968–2012)",
      },
      "narrow": "ZMK",
      "symbol": "ZMK",
    },
    "ZMW": Object {
      "displayName": Object {
        "other": "Zambian kwachas",
      },
      "narrow": "ZK",
      "symbol": "ZMW",
    },
    "ZRN": Object {
      "displayName": Object {
        "other": "Zairean new zaires (1993–1998)",
      },
      "narrow": "ZRN",
      "symbol": "ZRN",
    },
    "ZRZ": Object {
      "displayName": Object {
        "other": "Zairean zaires (1971–1993)",
      },
      "narrow": "ZRZ",
      "symbol": "ZRZ",
    },
    "ZWD": Object {
      "displayName": Object {
        "other": "Zimbabwean dollars (1980–2008)",
      },
      "narrow": "ZWD",
      "symbol": "ZWD",
    },
    "ZWL": Object {
      "displayName": Object {
        "other": "Zimbabwean dollars (2009)",
      },
      "narrow": "ZWL",
      "symbol": "ZWL",
    },
    "ZWR": Object {
      "displayName": Object {
        "other": "Zimbabwean dollars (2008)",
      },
      "narrow": "ZWR",
      "symbol": "ZWR",
    },
  },
}
`;

exports[`extract-currencies should be able to extract vi 1`] = `
Object {
  "vi": Object {
    "ADP": Object {
      "displayName": Object {
        "other": "ADP",
      },
      "narrow": "ADP",
      "symbol": "ADP",
    },
    "AED": Object {
      "displayName": Object {
        "other": "Dirham UAE",
      },
      "narrow": "AED",
      "symbol": "AED",
    },
    "AFA": Object {
      "displayName": Object {
        "other": "AFA",
      },
      "narrow": "AFA",
      "symbol": "AFA",
    },
    "AFN": Object {
      "displayName": Object {
        "other": "Afghani Afghanistan",
      },
      "narrow": "AFN",
      "symbol": "AFN",
    },
    "ALK": Object {
      "displayName": Object {
        "other": "ALK",
      },
      "narrow": "ALK",
      "symbol": "ALK",
    },
    "ALL": Object {
      "displayName": Object {
        "other": "Lek Albania",
      },
      "narrow": "ALL",
      "symbol": "ALL",
    },
    "AMD": Object {
      "displayName": Object {
        "other": "Dram Armenia",
      },
      "narrow": "AMD",
      "symbol": "AMD",
    },
    "ANG": Object {
      "displayName": Object {
        "other": "Guilder Antille Hà Lan",
      },
      "narrow": "ANG",
      "symbol": "ANG",
    },
    "AOA": Object {
      "displayName": Object {
        "other": "Kwanza Angola",
      },
      "narrow": "Kz",
      "symbol": "AOA",
    },
    "AOK": Object {
      "displayName": Object {
        "other": "AOK",
      },
      "narrow": "AOK",
      "symbol": "AOK",
    },
    "AON": Object {
      "displayName": Object {
        "other": "AON",
      },
      "narrow": "AON",
      "symbol": "AON",
    },
    "AOR": Object {
      "displayName": Object {
        "other": "AOR",
      },
      "narrow": "AOR",
      "symbol": "AOR",
    },
    "ARA": Object {
      "displayName": Object {
        "other": "ARA",
      },
      "narrow": "ARA",
      "symbol": "ARA",
    },
    "ARL": Object {
      "displayName": Object {
        "other": "ARL",
      },
      "narrow": "ARL",
      "symbol": "ARL",
    },
    "ARM": Object {
      "displayName": Object {
        "other": "ARM",
      },
      "narrow": "ARM",
      "symbol": "ARM",
    },
    "ARP": Object {
      "displayName": Object {
        "other": "ARP",
      },
      "narrow": "ARP",
      "symbol": "ARP",
    },
    "ARS": Object {
      "displayName": Object {
        "other": "Peso Argentina",
      },
      "narrow": "$",
      "symbol": "ARS",
    },
    "ATS": Object {
      "displayName": Object {
        "other": "ATS",
      },
      "narrow": "ATS",
      "symbol": "ATS",
    },
    "AUD": Object {
      "displayName": Object {
        "other": "Đô la Australia",
      },
      "narrow": "$",
      "symbol": "AU$",
    },
    "AWG": Object {
      "displayName": Object {
        "other": "Florin Aruba",
      },
      "narrow": "AWG",
      "symbol": "AWG",
    },
    "AZM": Object {
      "displayName": Object {
        "other": "AZM",
      },
      "narrow": "AZM",
      "symbol": "AZM",
    },
    "AZN": Object {
      "displayName": Object {
        "other": "Manat Azerbaijan",
      },
      "narrow": "AZN",
      "symbol": "AZN",
    },
    "BAD": Object {
      "displayName": Object {
        "other": "BAD",
      },
      "narrow": "BAD",
      "symbol": "BAD",
    },
    "BAM": Object {
      "displayName": Object {
        "other": "Mark Bosnia-Herzegovina có thể chuyển đổi",
      },
      "narrow": "KM",
      "symbol": "BAM",
    },
    "BAN": Object {
      "displayName": Object {
        "other": "BAN",
      },
      "narrow": "BAN",
      "symbol": "BAN",
    },
    "BBD": Object {
      "displayName": Object {
        "other": "Đô la Barbados",
      },
      "narrow": "$",
      "symbol": "BBD",
    },
    "BDT": Object {
      "displayName": Object {
        "other": "Taka Bangladesh",
      },
      "narrow": "৳",
      "symbol": "BDT",
    },
    "BEC": Object {
      "displayName": Object {
        "other": "BEC",
      },
      "narrow": "BEC",
      "symbol": "BEC",
    },
    "BEF": Object {
      "displayName": Object {
        "other": "BEF",
      },
      "narrow": "BEF",
      "symbol": "BEF",
    },
    "BEL": Object {
      "displayName": Object {
        "other": "BEL",
      },
      "narrow": "BEL",
      "symbol": "BEL",
    },
    "BGL": Object {
      "displayName": Object {
        "other": "BGL",
      },
      "narrow": "BGL",
      "symbol": "BGL",
    },
    "BGM": Object {
      "displayName": Object {
        "other": "BGM",
      },
      "narrow": "BGM",
      "symbol": "BGM",
    },
    "BGN": Object {
      "displayName": Object {
        "other": "Lev Bulgaria",
      },
      "narrow": "BGN",
      "symbol": "BGN",
    },
    "BGO": Object {
      "displayName": Object {
        "other": "BGO",
      },
      "narrow": "BGO",
      "symbol": "BGO",
    },
    "BHD": Object {
      "displayName": Object {
        "other": "Dinar Bahrain",
      },
      "narrow": "BHD",
      "symbol": "BHD",
    },
    "BIF": Object {
      "displayName": Object {
        "other": "Franc Burundi",
      },
      "narrow": "BIF",
      "symbol": "BIF",
    },
    "BMD": Object {
      "displayName": Object {
        "other": "Đô la Bermuda",
      },
      "narrow": "$",
      "symbol": "BMD",
    },
    "BND": Object {
      "displayName": Object {
        "other": "Đô la Brunei",
      },
      "narrow": "$",
      "symbol": "BND",
    },
    "BOB": Object {
      "displayName": Object {
        "other": "Boliviano Bolivia",
      },
      "narrow": "Bs",
      "symbol": "BOB",
    },
    "BOL": Object {
      "displayName": Object {
        "other": "BOL",
      },
      "narrow": "BOL",
      "symbol": "BOL",
    },
    "BOP": Object {
      "displayName": Object {
        "other": "BOP",
      },
      "narrow": "BOP",
      "symbol": "BOP",
    },
    "BOV": Object {
      "displayName": Object {
        "other": "BOV",
      },
      "narrow": "BOV",
      "symbol": "BOV",
    },
    "BRB": Object {
      "displayName": Object {
        "other": "BRB",
      },
      "narrow": "BRB",
      "symbol": "BRB",
    },
    "BRC": Object {
      "displayName": Object {
        "other": "BRC",
      },
      "narrow": "BRC",
      "symbol": "BRC",
    },
    "BRE": Object {
      "displayName": Object {
        "other": "BRE",
      },
      "narrow": "BRE",
      "symbol": "BRE",
    },
    "BRL": Object {
      "displayName": Object {
        "other": "Real Braxin",
      },
      "narrow": "R$",
      "symbol": "R$",
    },
    "BRN": Object {
      "displayName": Object {
        "other": "BRN",
      },
      "narrow": "BRN",
      "symbol": "BRN",
    },
    "BRR": Object {
      "displayName": Object {
        "other": "BRR",
      },
      "narrow": "BRR",
      "symbol": "BRR",
    },
    "BRZ": Object {
      "displayName": Object {
        "other": "BRZ",
      },
      "narrow": "BRZ",
      "symbol": "BRZ",
    },
    "BSD": Object {
      "displayName": Object {
        "other": "Đô la Bahamas",
      },
      "narrow": "$",
      "symbol": "BSD",
    },
    "BTN": Object {
      "displayName": Object {
        "other": "Ngultrum Bhutan",
      },
      "narrow": "BTN",
      "symbol": "BTN",
    },
    "BUK": Object {
      "displayName": Object {
        "other": "BUK",
      },
      "narrow": "BUK",
      "symbol": "BUK",
    },
    "BWP": Object {
      "displayName": Object {
        "other": "Pula Botswana",
      },
      "narrow": "P",
      "symbol": "BWP",
    },
    "BYB": Object {
      "displayName": Object {
        "other": "BYB",
      },
      "narrow": "BYB",
      "symbol": "BYB",
    },
    "BYN": Object {
      "displayName": Object {
        "other": "Rúp Belarus",
      },
      "narrow": "р.",
      "symbol": "BYN",
    },
    "BYR": Object {
      "displayName": Object {
        "other": "Rúp Belarus (2000–2016)",
      },
      "narrow": "BYR",
      "symbol": "BYR",
    },
    "BZD": Object {
      "displayName": Object {
        "other": "Đô la Belize",
      },
      "narrow": "$",
      "symbol": "BZD",
    },
    "CAD": Object {
      "displayName": Object {
        "other": "Đô la Canada",
      },
      "narrow": "$",
      "symbol": "CA$",
    },
    "CDF": Object {
      "displayName": Object {
        "other": "Franc Congo",
      },
      "narrow": "CDF",
      "symbol": "CDF",
    },
    "CHE": Object {
      "displayName": Object {
        "other": "CHE",
      },
      "narrow": "CHE",
      "symbol": "CHE",
    },
    "CHF": Object {
      "displayName": Object {
        "other": "Franc Thụy sĩ",
      },
      "narrow": "CHF",
      "symbol": "CHF",
    },
    "CHW": Object {
      "displayName": Object {
        "other": "CHW",
      },
      "narrow": "CHW",
      "symbol": "CHW",
    },
    "CLE": Object {
      "displayName": Object {
        "other": "CLE",
      },
      "narrow": "CLE",
      "symbol": "CLE",
    },
    "CLF": Object {
      "displayName": Object {
        "other": "CLF",
      },
      "narrow": "CLF",
      "symbol": "CLF",
    },
    "CLP": Object {
      "displayName": Object {
        "other": "Peso Chile",
      },
      "narrow": "$",
      "symbol": "CLP",
    },
    "CNH": Object {
      "displayName": Object {
        "other": "Nhân dân tệ (hải ngoại)",
      },
      "narrow": "CNH",
      "symbol": "CNH",
    },
    "CNX": Object {
      "displayName": Object {
        "other": "CNX",
      },
      "narrow": "CNX",
      "symbol": "CNX",
    },
    "CNY": Object {
      "displayName": Object {
        "other": "Nhân dân tệ",
      },
      "narrow": "¥",
      "symbol": "CN¥",
    },
    "COP": Object {
      "displayName": Object {
        "other": "Peso Colombia",
      },
      "narrow": "$",
      "symbol": "COP",
    },
    "COU": Object {
      "displayName": Object {
        "other": "COU",
      },
      "narrow": "COU",
      "symbol": "COU",
    },
    "CRC": Object {
      "displayName": Object {
        "other": "Colón Costa Rica",
      },
      "narrow": "₡",
      "symbol": "CRC",
    },
    "CSD": Object {
      "displayName": Object {
        "other": "CSD",
      },
      "narrow": "CSD",
      "symbol": "CSD",
    },
    "CSK": Object {
      "displayName": Object {
        "other": "CSK",
      },
      "narrow": "CSK",
      "symbol": "CSK",
    },
    "CUC": Object {
      "displayName": Object {
        "other": "Peso Cuba có thể chuyển đổi",
      },
      "narrow": "$",
      "symbol": "CUC",
    },
    "CUP": Object {
      "displayName": Object {
        "other": "Peso Cuba",
      },
      "narrow": "$",
      "symbol": "CUP",
    },
    "CVE": Object {
      "displayName": Object {
        "other": "Escudo Cape Verde",
      },
      "narrow": "CVE",
      "symbol": "CVE",
    },
    "CYP": Object {
      "displayName": Object {
        "other": "CYP",
      },
      "narrow": "CYP",
      "symbol": "CYP",
    },
    "CZK": Object {
      "displayName": Object {
        "other": "Koruna Cộng hòa Séc",
      },
      "narrow": "Kč",
      "symbol": "CZK",
    },
    "DDM": Object {
      "displayName": Object {
        "other": "DDM",
      },
      "narrow": "DDM",
      "symbol": "DDM",
    },
    "DEM": Object {
      "displayName": Object {
        "other": "DEM",
      },
      "narrow": "DEM",
      "symbol": "DEM",
    },
    "DJF": Object {
      "displayName": Object {
        "other": "Franc Djibouti",
      },
      "narrow": "DJF",
      "symbol": "DJF",
    },
    "DKK": Object {
      "displayName": Object {
        "other": "Krone Đan Mạch",
      },
      "narrow": "kr",
      "symbol": "DKK",
    },
    "DOP": Object {
      "displayName": Object {
        "other": "Peso Dominica",
      },
      "narrow": "$",
      "symbol": "DOP",
    },
    "DZD": Object {
      "displayName": Object {
        "other": "Dinar Algeria",
      },
      "narrow": "DZD",
      "symbol": "DZD",
    },
    "ECS": Object {
      "displayName": Object {
        "other": "ECS",
      },
      "narrow": "ECS",
      "symbol": "ECS",
    },
    "ECV": Object {
      "displayName": Object {
        "other": "ECV",
      },
      "narrow": "ECV",
      "symbol": "ECV",
    },
    "EEK": Object {
      "displayName": Object {
        "other": "EEK",
      },
      "narrow": "EEK",
      "symbol": "EEK",
    },
    "EGP": Object {
      "displayName": Object {
        "other": "Bảng Ai Cập",
      },
      "narrow": "E£",
      "symbol": "EGP",
    },
    "ERN": Object {
      "displayName": Object {
        "other": "Nakfa Eritrea",
      },
      "narrow": "ERN",
      "symbol": "ERN",
    },
    "ESA": Object {
      "displayName": Object {
        "other": "ESA",
      },
      "narrow": "ESA",
      "symbol": "ESA",
    },
    "ESB": Object {
      "displayName": Object {
        "other": "ESB",
      },
      "narrow": "ESB",
      "symbol": "ESB",
    },
    "ESP": Object {
      "displayName": Object {
        "other": "ESP",
      },
      "narrow": "₧",
      "symbol": "ESP",
    },
    "ETB": Object {
      "displayName": Object {
        "other": "Birr Ethiopia",
      },
      "narrow": "ETB",
      "symbol": "ETB",
    },
    "EUR": Object {
      "displayName": Object {
        "other": "euro",
      },
      "narrow": "€",
      "symbol": "€",
    },
    "FIM": Object {
      "displayName": Object {
        "other": "FIM",
      },
      "narrow": "FIM",
      "symbol": "FIM",
    },
    "FJD": Object {
      "displayName": Object {
        "other": "Đô la Fiji",
      },
      "narrow": "$",
      "symbol": "FJD",
    },
    "FKP": Object {
      "displayName": Object {
        "other": "Bảng Quần đảo Falkland",
      },
      "narrow": "£",
      "symbol": "FKP",
    },
    "FRF": Object {
      "displayName": Object {
        "other": "FRF",
      },
      "narrow": "FRF",
      "symbol": "FRF",
    },
    "GBP": Object {
      "displayName": Object {
        "other": "Bảng Anh",
      },
      "narrow": "£",
      "symbol": "£",
    },
    "GEK": Object {
      "displayName": Object {
        "other": "GEK",
      },
      "narrow": "GEK",
      "symbol": "GEK",
    },
    "GEL": Object {
      "displayName": Object {
        "other": "Lari Georgia",
      },
      "narrow": "₾",
      "symbol": "GEL",
    },
    "GHC": Object {
      "displayName": Object {
        "other": "GHC",
      },
      "narrow": "GHC",
      "symbol": "GHC",
    },
    "GHS": Object {
      "displayName": Object {
        "other": "Cedi Ghana",
      },
      "narrow": "GHS",
      "symbol": "GHS",
    },
    "GIP": Object {
      "displayName": Object {
        "other": "Bảng Gibraltar",
      },
      "narrow": "£",
      "symbol": "GIP",
    },
    "GMD": Object {
      "displayName": Object {
        "other": "Dalasi Gambia",
      },
      "narrow": "GMD",
      "symbol": "GMD",
    },
    "GNF": Object {
      "displayName": Object {
        "other": "Franc Guinea",
      },
      "narrow": "FG",
      "symbol": "GNF",
    },
    "GNS": Object {
      "displayName": Object {
        "other": "GNS",
      },
      "narrow": "GNS",
      "symbol": "GNS",
    },
    "GQE": Object {
      "displayName": Object {
        "other": "GQE",
      },
      "narrow": "GQE",
      "symbol": "GQE",
    },
    "GRD": Object {
      "displayName": Object {
        "other": "GRD",
      },
      "narrow": "GRD",
      "symbol": "GRD",
    },
    "GTQ": Object {
      "displayName": Object {
        "other": "Quetzal Guatemala",
      },
      "narrow": "Q",
      "symbol": "GTQ",
    },
    "GWE": Object {
      "displayName": Object {
        "other": "GWE",
      },
      "narrow": "GWE",
      "symbol": "GWE",
    },
    "GWP": Object {
      "displayName": Object {
        "other": "GWP",
      },
      "narrow": "GWP",
      "symbol": "GWP",
    },
    "GYD": Object {
      "displayName": Object {
        "other": "Đô la Guyana",
      },
      "narrow": "$",
      "symbol": "GYD",
    },
    "HKD": Object {
      "displayName": Object {
        "other": "Đô la Hồng Kông",
      },
      "narrow": "$",
      "symbol": "HK$",
    },
    "HNL": Object {
      "displayName": Object {
        "other": "Lempira Honduras",
      },
      "narrow": "L",
      "symbol": "HNL",
    },
    "HRD": Object {
      "displayName": Object {
        "other": "HRD",
      },
      "narrow": "HRD",
      "symbol": "HRD",
    },
    "HRK": Object {
      "displayName": Object {
        "other": "Kuna Croatia",
      },
      "narrow": "kn",
      "symbol": "HRK",
    },
    "HTG": Object {
      "displayName": Object {
        "other": "Gourde Haiti",
      },
      "narrow": "HTG",
      "symbol": "HTG",
    },
    "HUF": Object {
      "displayName": Object {
        "other": "forint Hungary",
      },
      "narrow": "Ft",
      "symbol": "HUF",
    },
    "IDR": Object {
      "displayName": Object {
        "other": "Rupiah Indonesia",
      },
      "narrow": "Rp",
      "symbol": "IDR",
    },
    "IEP": Object {
      "displayName": Object {
        "other": "IEP",
      },
      "narrow": "IEP",
      "symbol": "IEP",
    },
    "ILP": Object {
      "displayName": Object {
        "other": "ILP",
      },
      "narrow": "ILP",
      "symbol": "ILP",
    },
    "ILR": Object {
      "displayName": Object {
        "other": "ILR",
      },
      "narrow": "ILR",
      "symbol": "ILR",
    },
    "ILS": Object {
      "displayName": Object {
        "other": "Sheqel Israel mới",
      },
      "narrow": "₪",
      "symbol": "₪",
    },
    "INR": Object {
      "displayName": Object {
        "other": "Rupee Ấn Độ",
      },
      "narrow": "₹",
      "symbol": "₹",
    },
    "IQD": Object {
      "displayName": Object {
        "other": "Dinar Iraq",
      },
      "narrow": "IQD",
      "symbol": "IQD",
    },
    "IRR": Object {
      "displayName": Object {
        "other": "Rial Iran",
      },
      "narrow": "IRR",
      "symbol": "IRR",
    },
    "ISJ": Object {
      "displayName": Object {
        "other": "ISJ",
      },
      "narrow": "ISJ",
      "symbol": "ISJ",
    },
    "ISK": Object {
      "displayName": Object {
        "other": "króna Iceland",
      },
      "narrow": "kr",
      "symbol": "ISK",
    },
    "ITL": Object {
      "displayName": Object {
        "other": "ITL",
      },
      "narrow": "ITL",
      "symbol": "ITL",
    },
    "JMD": Object {
      "displayName": Object {
        "other": "Đô la Jamaica",
      },
      "narrow": "$",
      "symbol": "JMD",
    },
    "JOD": Object {
      "displayName": Object {
        "other": "Dinar Jordan",
      },
      "narrow": "JOD",
      "symbol": "JOD",
    },
    "JPY": Object {
      "displayName": Object {
        "other": "Yên Nhật",
      },
      "narrow": "¥",
      "symbol": "JP¥",
    },
    "KES": Object {
      "displayName": Object {
        "other": "Shilling Kenya",
      },
      "narrow": "KES",
      "symbol": "KES",
    },
    "KGS": Object {
      "displayName": Object {
        "other": "Som Kyrgyzstan",
      },
      "narrow": "KGS",
      "symbol": "KGS",
    },
    "KHR": Object {
      "displayName": Object {
        "other": "Riel Campuchia",
      },
      "narrow": "៛",
      "symbol": "KHR",
    },
    "KMF": Object {
      "displayName": Object {
        "other": "Franc Comoros",
      },
      "narrow": "CF",
      "symbol": "KMF",
    },
    "KPW": Object {
      "displayName": Object {
        "other": "Won Triều Tiên",
      },
      "narrow": "₩",
      "symbol": "KPW",
    },
    "KRH": Object {
      "displayName": Object {
        "other": "KRH",
      },
      "narrow": "KRH",
      "symbol": "KRH",
    },
    "KRO": Object {
      "displayName": Object {
        "other": "KRO",
      },
      "narrow": "KRO",
      "symbol": "KRO",
    },
    "KRW": Object {
      "displayName": Object {
        "other": "Won Hàn Quốc",
      },
      "narrow": "₩",
      "symbol": "₩",
    },
    "KWD": Object {
      "displayName": Object {
        "other": "Dinar Kuwait",
      },
      "narrow": "KWD",
      "symbol": "KWD",
    },
    "KYD": Object {
      "displayName": Object {
        "other": "Đô la Quần đảo Cayman",
      },
      "narrow": "$",
      "symbol": "KYD",
    },
    "KZT": Object {
      "displayName": Object {
        "other": "Tenge Kazakhstan",
      },
      "narrow": "₸",
      "symbol": "KZT",
    },
    "LAK": Object {
      "displayName": Object {
        "other": "Kip Lào",
      },
      "narrow": "₭",
      "symbol": "LAK",
    },
    "LBP": Object {
      "displayName": Object {
        "other": "Bảng Li-băng",
      },
      "narrow": "L£",
      "symbol": "LBP",
    },
    "LKR": Object {
      "displayName": Object {
        "other": "Rupee Sri Lanka",
      },
      "narrow": "Rs",
      "symbol": "LKR",
    },
    "LRD": Object {
      "displayName": Object {
        "other": "Đô la Liberia",
      },
      "narrow": "$",
      "symbol": "LRD",
    },
    "LSL": Object {
      "displayName": Object {
        "other": "LSL",
      },
      "narrow": "LSL",
      "symbol": "LSL",
    },
    "LTL": Object {
      "displayName": Object {
        "other": "litas Lít-va",
      },
      "narrow": "Lt",
      "symbol": "LTL",
    },
    "LTT": Object {
      "displayName": Object {
        "other": "LTT",
      },
      "narrow": "LTT",
      "symbol": "LTT",
    },
    "LUC": Object {
      "displayName": Object {
        "other": "LUC",
      },
      "narrow": "LUC",
      "symbol": "LUC",
    },
    "LUF": Object {
      "displayName": Object {
        "other": "LUF",
      },
      "narrow": "LUF",
      "symbol": "LUF",
    },
    "LUL": Object {
      "displayName": Object {
        "other": "LUL",
      },
      "narrow": "LUL",
      "symbol": "LUL",
    },
    "LVL": Object {
      "displayName": Object {
        "other": "lats Lativia",
      },
      "narrow": "Ls",
      "symbol": "LVL",
    },
    "LVR": Object {
      "displayName": Object {
        "other": "LVR",
      },
      "narrow": "LVR",
      "symbol": "LVR",
    },
    "LYD": Object {
      "displayName": Object {
        "other": "Dinar Libi",
      },
      "narrow": "LYD",
      "symbol": "LYD",
    },
    "MAD": Object {
      "displayName": Object {
        "other": "Dirham Ma-rốc",
      },
      "narrow": "MAD",
      "symbol": "MAD",
    },
    "MAF": Object {
      "displayName": Object {
        "other": "MAF",
      },
      "narrow": "MAF",
      "symbol": "MAF",
    },
    "MCF": Object {
      "displayName": Object {
        "other": "MCF",
      },
      "narrow": "MCF",
      "symbol": "MCF",
    },
    "MDC": Object {
      "displayName": Object {
        "other": "MDC",
      },
      "narrow": "MDC",
      "symbol": "MDC",
    },
    "MDL": Object {
      "displayName": Object {
        "other": "Leu Moldova",
      },
      "narrow": "MDL",
      "symbol": "MDL",
    },
    "MGA": Object {
      "displayName": Object {
        "other": "Ariary Malagasy",
      },
      "narrow": "Ar",
      "symbol": "MGA",
    },
    "MGF": Object {
      "displayName": Object {
        "other": "MGF",
      },
      "narrow": "MGF",
      "symbol": "MGF",
    },
    "MKD": Object {
      "displayName": Object {
        "other": "Denar Macedonia",
      },
      "narrow": "MKD",
      "symbol": "MKD",
    },
    "MKN": Object {
      "displayName": Object {
        "other": "MKN",
      },
      "narrow": "MKN",
      "symbol": "MKN",
    },
    "MLF": Object {
      "displayName": Object {
        "other": "MLF",
      },
      "narrow": "MLF",
      "symbol": "MLF",
    },
    "MMK": Object {
      "displayName": Object {
        "other": "Kyat Myanma",
      },
      "narrow": "K",
      "symbol": "MMK",
    },
    "MNT": Object {
      "displayName": Object {
        "other": "Tugrik Mông Cổ",
      },
      "narrow": "₮",
      "symbol": "MNT",
    },
    "MOP": Object {
      "displayName": Object {
        "other": "Pataca Ma Cao",
      },
      "narrow": "MOP",
      "symbol": "MOP",
    },
    "MRO": Object {
      "displayName": Object {
        "other": "Ouguiya Mauritania (1973–2017)",
      },
      "narrow": "MRO",
      "symbol": "MRO",
    },
    "MRU": Object {
      "displayName": Object {
        "other": "Ouguiya Mauritania",
      },
      "narrow": "MRU",
      "symbol": "MRU",
    },
    "MTL": Object {
      "displayName": Object {
        "other": "MTL",
      },
      "narrow": "MTL",
      "symbol": "MTL",
    },
    "MTP": Object {
      "displayName": Object {
        "other": "MTP",
      },
      "narrow": "MTP",
      "symbol": "MTP",
    },
    "MUR": Object {
      "displayName": Object {
        "other": "Rupee Mauritius",
      },
      "narrow": "Rs",
      "symbol": "MUR",
    },
    "MVP": Object {
      "displayName": Object {
        "other": "MVP",
      },
      "narrow": "MVP",
      "symbol": "MVP",
    },
    "MVR": Object {
      "displayName": Object {
        "other": "Rufiyaa Maldives",
      },
      "narrow": "MVR",
      "symbol": "MVR",
    },
    "MWK": Object {
      "displayName": Object {
        "other": "Kwacha Malawi",
      },
      "narrow": "MWK",
      "symbol": "MWK",
    },
    "MXN": Object {
      "displayName": Object {
        "other": "Peso Mexico",
      },
      "narrow": "$",
      "symbol": "MX$",
    },
    "MXP": Object {
      "displayName": Object {
        "other": "MXP",
      },
      "narrow": "MXP",
      "symbol": "MXP",
    },
    "MXV": Object {
      "displayName": Object {
        "other": "MXV",
      },
      "narrow": "MXV",
      "symbol": "MXV",
    },
    "MYR": Object {
      "displayName": Object {
        "other": "Ringgit Malaysia",
      },
      "narrow": "RM",
      "symbol": "MYR",
    },
    "MZE": Object {
      "displayName": Object {
        "other": "MZE",
      },
      "narrow": "MZE",
      "symbol": "MZE",
    },
    "MZM": Object {
      "displayName": Object {
        "other": "MZM",
      },
      "narrow": "MZM",
      "symbol": "MZM",
    },
    "MZN": Object {
      "displayName": Object {
        "other": "Metical Mozambique",
      },
      "narrow": "MZN",
      "symbol": "MZN",
    },
    "NAD": Object {
      "displayName": Object {
        "other": "Đô la Namibia",
      },
      "narrow": "$",
      "symbol": "NAD",
    },
    "NGN": Object {
      "displayName": Object {
        "other": "Naira Nigeria",
      },
      "narrow": "₦",
      "symbol": "NGN",
    },
    "NIC": Object {
      "displayName": Object {
        "other": "NIC",
      },
      "narrow": "NIC",
      "symbol": "NIC",
    },
    "NIO": Object {
      "displayName": Object {
        "other": "Córdoba Nicaragua",
      },
      "narrow": "C$",
      "symbol": "NIO",
    },
    "NLG": Object {
      "displayName": Object {
        "other": "NLG",
      },
      "narrow": "NLG",
      "symbol": "NLG",
    },
    "NOK": Object {
      "displayName": Object {
        "other": "Krone Na Uy",
      },
      "narrow": "kr",
      "symbol": "NOK",
    },
    "NPR": Object {
      "displayName": Object {
        "other": "Rupee Nepal",
      },
      "narrow": "Rs",
      "symbol": "NPR",
    },
    "NZD": Object {
      "displayName": Object {
        "other": "Đô la New Zealand",
      },
      "narrow": "$",
      "symbol": "NZ$",
    },
    "OMR": Object {
      "displayName": Object {
        "other": "Rial Oman",
      },
      "narrow": "OMR",
      "symbol": "OMR",
    },
    "PAB": Object {
      "displayName": Object {
        "other": "Balboa Panama",
      },
      "narrow": "PAB",
      "symbol": "PAB",
    },
    "PEI": Object {
      "displayName": Object {
        "other": "PEI",
      },
      "narrow": "PEI",
      "symbol": "PEI",
    },
    "PEN": Object {
      "displayName": Object {
        "other": "Sol Peru",
      },
      "narrow": "PEN",
      "symbol": "PEN",
    },
    "PES": Object {
      "displayName": Object {
        "other": "PES",
      },
      "narrow": "PES",
      "symbol": "PES",
    },
    "PGK": Object {
      "displayName": Object {
        "other": "Kina Papua New Guinea",
      },
      "narrow": "PGK",
      "symbol": "PGK",
    },
    "PHP": Object {
      "displayName": Object {
        "other": "Peso Philipin",
      },
      "narrow": "₱",
      "symbol": "PHP",
    },
    "PKR": Object {
      "displayName": Object {
        "other": "Rupee Pakistan",
      },
      "narrow": "Rs",
      "symbol": "PKR",
    },
    "PLN": Object {
      "displayName": Object {
        "other": "Zloty Ba Lan",
      },
      "narrow": "zł",
      "symbol": "PLN",
    },
    "PLZ": Object {
      "displayName": Object {
        "other": "PLZ",
      },
      "narrow": "PLZ",
      "symbol": "PLZ",
    },
    "PTE": Object {
      "displayName": Object {
        "other": "PTE",
      },
      "narrow": "PTE",
      "symbol": "PTE",
    },
    "PYG": Object {
      "displayName": Object {
        "other": "Guarani Paraguay",
      },
      "narrow": "₲",
      "symbol": "PYG",
    },
    "QAR": Object {
      "displayName": Object {
        "other": "Rial Qatar",
      },
      "narrow": "QAR",
      "symbol": "QAR",
    },
    "RHD": Object {
      "displayName": Object {
        "other": "RHD",
      },
      "narrow": "RHD",
      "symbol": "RHD",
    },
    "ROL": Object {
      "displayName": Object {
        "other": "ROL",
      },
      "narrow": "ROL",
      "symbol": "ROL",
    },
    "RON": Object {
      "displayName": Object {
        "other": "Leu Romania",
      },
      "narrow": "lei",
      "symbol": "RON",
    },
    "RSD": Object {
      "displayName": Object {
        "other": "Dinar Serbia",
      },
      "narrow": "RSD",
      "symbol": "RSD",
    },
    "RUB": Object {
      "displayName": Object {
        "other": "Rúp Nga",
      },
      "narrow": "₽",
      "symbol": "RUB",
    },
    "RUR": Object {
      "displayName": Object {
        "other": "RUR",
      },
      "narrow": "р.",
      "symbol": "RUR",
    },
    "RWF": Object {
      "displayName": Object {
        "other": "Franc Rwanda",
      },
      "narrow": "RF",
      "symbol": "RWF",
    },
    "SAR": Object {
      "displayName": Object {
        "other": "Riyal Ả Rập Xê-út",
      },
      "narrow": "SAR",
      "symbol": "SAR",
    },
    "SBD": Object {
      "displayName": Object {
        "other": "Đô la quần đảo Solomon",
      },
      "narrow": "$",
      "symbol": "SBD",
    },
    "SCR": Object {
      "displayName": Object {
        "other": "Rupee Seychelles",
      },
      "narrow": "SCR",
      "symbol": "SCR",
    },
    "SDD": Object {
      "displayName": Object {
        "other": "SDD",
      },
      "narrow": "SDD",
      "symbol": "SDD",
    },
    "SDG": Object {
      "displayName": Object {
        "other": "Bảng Sudan",
      },
      "narrow": "SDG",
      "symbol": "SDG",
    },
    "SDP": Object {
      "displayName": Object {
        "other": "SDP",
      },
      "narrow": "SDP",
      "symbol": "SDP",
    },
    "SEK": Object {
      "displayName": Object {
        "other": "Krona Thụy Điển",
      },
      "narrow": "kr",
      "symbol": "SEK",
    },
    "SGD": Object {
      "displayName": Object {
        "other": "Đô la Singapore",
      },
      "narrow": "$",
      "symbol": "SGD",
    },
    "SHP": Object {
      "displayName": Object {
        "other": "bảng St. Helena",
      },
      "narrow": "£",
      "symbol": "SHP",
    },
    "SIT": Object {
      "displayName": Object {
        "other": "SIT",
      },
      "narrow": "SIT",
      "symbol": "SIT",
    },
    "SKK": Object {
      "displayName": Object {
        "other": "SKK",
      },
      "narrow": "SKK",
      "symbol": "SKK",
    },
    "SLL": Object {
      "displayName": Object {
        "other": "Leone Sierra Leone",
      },
      "narrow": "SLL",
      "symbol": "SLL",
    },
    "SOS": Object {
      "displayName": Object {
        "other": "Schilling Somali",
      },
      "narrow": "SOS",
      "symbol": "SOS",
    },
    "SRD": Object {
      "displayName": Object {
        "other": "Đô la Suriname",
      },
      "narrow": "$",
      "symbol": "SRD",
    },
    "SRG": Object {
      "displayName": Object {
        "other": "SRG",
      },
      "narrow": "SRG",
      "symbol": "SRG",
    },
    "SSP": Object {
      "displayName": Object {
        "other": "Bảng Nam Sudan",
      },
      "narrow": "£",
      "symbol": "SSP",
    },
    "STD": Object {
      "displayName": Object {
        "other": "Dobra São Tomé và Príncipe (1977–2017)",
      },
      "narrow": "STD",
      "symbol": "STD",
    },
    "STN": Object {
      "displayName": Object {
        "other": "Dobra São Tomé và Príncipe",
      },
      "narrow": "Db",
      "symbol": "STN",
    },
    "SUR": Object {
      "displayName": Object {
        "other": "SUR",
      },
      "narrow": "SUR",
      "symbol": "SUR",
    },
    "SVC": Object {
      "displayName": Object {
        "other": "SVC",
      },
      "narrow": "SVC",
      "symbol": "SVC",
    },
    "SYP": Object {
      "displayName": Object {
        "other": "Bảng Syria",
      },
      "narrow": "£",
      "symbol": "SYP",
    },
    "SZL": Object {
      "displayName": Object {
        "other": "Lilangeni Swaziland",
      },
      "narrow": "SZL",
      "symbol": "SZL",
    },
    "THB": Object {
      "displayName": Object {
        "other": "Bạt Thái Lan",
      },
      "narrow": "฿",
      "symbol": "฿",
    },
    "TJR": Object {
      "displayName": Object {
        "other": "TJR",
      },
      "narrow": "TJR",
      "symbol": "TJR",
    },
    "TJS": Object {
      "displayName": Object {
        "other": "Somoni Tajikistan",
      },
      "narrow": "TJS",
      "symbol": "TJS",
    },
    "TMM": Object {
      "displayName": Object {
        "other": "TMM",
      },
      "narrow": "TMM",
      "symbol": "TMM",
    },
    "TMT": Object {
      "displayName": Object {
        "other": "Manat Turkmenistan",
      },
      "narrow": "TMT",
      "symbol": "TMT",
    },
    "TND": Object {
      "displayName": Object {
        "other": "Dinar Tunisia",
      },
      "narrow": "TND",
      "symbol": "TND",
    },
    "TOP": Object {
      "displayName": Object {
        "other": "Paʻanga Tonga",
      },
      "narrow": "T$",
      "symbol": "TOP",
    },
    "TPE": Object {
      "displayName": Object {
        "other": "TPE",
      },
      "narrow": "TPE",
      "symbol": "TPE",
    },
    "TRL": Object {
      "displayName": Object {
        "other": "lia Thổ Nhĩ Kỳ (1922–2005)",
      },
      "narrow": "TRL",
      "symbol": "TRL",
    },
    "TRY": Object {
      "displayName": Object {
        "other": "Lia Thổ Nhĩ Kỳ",
      },
      "narrow": "₺",
      "symbol": "TRY",
    },
    "TTD": Object {
      "displayName": Object {
        "other": "Đô la Trinidad và Tobago",
      },
      "narrow": "$",
      "symbol": "TTD",
    },
    "TWD": Object {
      "displayName": Object {
        "other": "Đô la Đài Loan mới",
      },
      "narrow": "NT$",
      "symbol": "NT$",
    },
    "TZS": Object {
      "displayName": Object {
        "other": "Shilling Tanzania",
      },
      "narrow": "TZS",
      "symbol": "TZS",
    },
    "UAH": Object {
      "displayName": Object {
        "other": "Hryvnia Ucraina",
      },
      "narrow": "₴",
      "symbol": "UAH",
    },
    "UAK": Object {
      "displayName": Object {
        "other": "UAK",
      },
      "narrow": "UAK",
      "symbol": "UAK",
    },
    "UGS": Object {
      "displayName": Object {
        "other": "UGS",
      },
      "narrow": "UGS",
      "symbol": "UGS",
    },
    "UGX": Object {
      "displayName": Object {
        "other": "Shilling Uganda",
      },
      "narrow": "UGX",
      "symbol": "UGX",
    },
    "USD": Object {
      "displayName": Object {
        "other": "Đô la Mỹ",
      },
      "narrow": "$",
      "symbol": "US$",
    },
    "USN": Object {
      "displayName": Object {
        "other": "USN",
      },
      "narrow": "USN",
      "symbol": "USN",
    },
    "USS": Object {
      "displayName": Object {
        "other": "USS",
      },
      "narrow": "USS",
      "symbol": "USS",
    },
    "UYI": Object {
      "displayName": Object {
        "other": "UYI",
      },
      "narrow": "UYI",
      "symbol": "UYI",
    },
    "UYP": Object {
      "displayName": Object {
        "other": "UYP",
      },
      "narrow": "UYP",
      "symbol": "UYP",
    },
    "UYU": Object {
      "displayName": Object {
        "other": "Peso Uruguay",
      },
      "narrow": "$",
      "symbol": "UYU",
    },
    "UYW": Object {
      "displayName": Object {
        "other": "UYW",
      },
      "narrow": "UYW",
      "symbol": "UYW",
    },
    "UZS": Object {
      "displayName": Object {
        "other": "Som Uzbekistan",
      },
      "narrow": "UZS",
      "symbol": "UZS",
    },
    "VEB": Object {
      "displayName": Object {
        "other": "VEB",
      },
      "narrow": "VEB",
      "symbol": "VEB",
    },
    "VEF": Object {
      "displayName": Object {
        "other": "Bolívar Venezuela (2008–2018)",
      },
      "narrow": "Bs",
      "symbol": "VEF",
    },
    "VES": Object {
      "displayName": Object {
        "other": "Bolívar Venezuela",
      },
      "narrow": "VES",
      "symbol": "VES",
    },
    "VND": Object {
      "displayName": Object {
        "other": "Đồng Việt Nam",
      },
      "narrow": "₫",
      "symbol": "₫",
    },
    "VNN": Object {
      "displayName": Object {
        "other": "VNN",
      },
      "narrow": "VNN",
      "symbol": "VNN",
    },
    "VUV": Object {
      "displayName": Object {
        "other": "Vatu Vanuatu",
      },
      "narrow": "VUV",
      "symbol": "VUV",
    },
    "WST": Object {
      "displayName": Object {
        "other": "Tala Samoa",
      },
      "narrow": "WST",
      "symbol": "WST",
    },
    "XAF": Object {
      "displayName": Object {
        "other": "franc CFA Trung Phi",
      },
      "narrow": "FCFA",
      "symbol": "FCFA",
    },
    "XAG": Object {
      "displayName": Object {
        "other": "XAG",
      },
      "narrow": "XAG",
      "symbol": "XAG",
    },
    "XAU": Object {
      "displayName": Object {
        "other": "XAU",
      },
      "narrow": "XAU",
      "symbol": "XAU",
    },
    "XBA": Object {
      "displayName": Object {
        "other": "XBA",
      },
      "narrow": "XBA",
      "symbol": "XBA",
    },
    "XBB": Object {
      "displayName": Object {
        "other": "XBB",
      },
      "narrow": "XBB",
      "symbol": "XBB",
    },
    "XBC": Object {
      "displayName": Object {
        "other": "XBC",
      },
      "narrow": "XBC",
      "symbol": "XBC",
    },
    "XBD": Object {
      "displayName": Object {
        "other": "XBD",
      },
      "narrow": "XBD",
      "symbol": "XBD",
    },
    "XCD": Object {
      "displayName": Object {
        "other": "Đô la Đông Caribê",
      },
      "narrow": "$",
      "symbol": "EC$",
    },
    "XDR": Object {
      "displayName": Object {
        "other": "XDR",
      },
      "narrow": "XDR",
      "symbol": "XDR",
    },
    "XEU": Object {
      "displayName": Object {
        "other": "XEU",
      },
      "narrow": "XEU",
      "symbol": "XEU",
    },
    "XFO": Object {
      "displayName": Object {
        "other": "XFO",
      },
      "narrow": "XFO",
      "symbol": "XFO",
    },
    "XFU": Object {
      "displayName": Object {
        "other": "XFU",
      },
      "narrow": "XFU",
      "symbol": "XFU",
    },
    "XOF": Object {
      "displayName": Object {
        "other": "franc CFA Tây Phi",
      },
      "narrow": "CFA",
      "symbol": "CFA",
    },
    "XPD": Object {
      "displayName": Object {
        "other": "XPD",
      },
      "narrow": "XPD",
      "symbol": "XPD",
    },
    "XPF": Object {
      "displayName": Object {
        "other": "Franc CFP",
      },
      "narrow": "CFPF",
      "symbol": "CFPF",
    },
    "XPT": Object {
      "displayName": Object {
        "other": "XPT",
      },
      "narrow": "XPT",
      "symbol": "XPT",
    },
    "XRE": Object {
      "displayName": Object {
        "other": "XRE",
      },
      "narrow": "XRE",
      "symbol": "XRE",
    },
    "XSU": Object {
      "displayName": Object {
        "other": "XSU",
      },
      "narrow": "XSU",
      "symbol": "XSU",
    },
    "XTS": Object {
      "displayName": Object {
        "other": "XTS",
      },
      "narrow": "XTS",
      "symbol": "XTS",
    },
    "XUA": Object {
      "displayName": Object {
        "other": "XUA",
      },
      "narrow": "XUA",
      "symbol": "XUA",
    },
    "XXX": Object {
      "displayName": Object {
        "other": "(tiền tệ chưa biết)",
      },
      "narrow": "XXX",
      "symbol": "XXX",
    },
    "YDD": Object {
      "displayName": Object {
        "other": "YDD",
      },
      "narrow": "YDD",
      "symbol": "YDD",
    },
    "YER": Object {
      "displayName": Object {
        "other": "Rial Yemen",
      },
      "narrow": "YER",
      "symbol": "YER",
    },
    "YUD": Object {
      "displayName": Object {
        "other": "YUD",
      },
      "narrow": "YUD",
      "symbol": "YUD",
    },
    "YUM": Object {
      "displayName": Object {
        "other": "YUM",
      },
      "narrow": "YUM",
      "symbol": "YUM",
    },
    "YUN": Object {
      "displayName": Object {
        "other": "YUN",
      },
      "narrow": "YUN",
      "symbol": "YUN",
    },
    "YUR": Object {
      "displayName": Object {
        "other": "YUR",
      },
      "narrow": "YUR",
      "symbol": "YUR",
    },
    "ZAL": Object {
      "displayName": Object {
        "other": "ZAL",
      },
      "narrow": "ZAL",
      "symbol": "ZAL",
    },
    "ZAR": Object {
      "displayName": Object {
        "other": "Rand Nam Phi",
      },
      "narrow": "R",
      "symbol": "ZAR",
    },
    "ZMK": Object {
      "displayName": Object {
        "other": "ZMK",
      },
      "narrow": "ZMK",
      "symbol": "ZMK",
    },
    "ZMW": Object {
      "displayName": Object {
        "other": "Kwacha Zambia",
      },
      "narrow": "ZK",
      "symbol": "ZMW",
    },
    "ZRN": Object {
      "displayName": Object {
        "other": "ZRN",
      },
      "narrow": "ZRN",
      "symbol": "ZRN",
    },
    "ZRZ": Object {
      "displayName": Object {
        "other": "ZRZ",
      },
      "narrow": "ZRZ",
      "symbol": "ZRZ",
    },
    "ZWD": Object {
      "displayName": Object {
        "other": "ZWD",
      },
      "narrow": "ZWD",
      "symbol": "ZWD",
    },
    "ZWL": Object {
      "displayName": Object {
        "other": "ZWL",
      },
      "narrow": "ZWL",
      "symbol": "ZWL",
    },
    "ZWR": Object {
      "displayName": Object {
        "other": "ZWR",
      },
      "narrow": "ZWR",
      "symbol": "ZWR",
    },
  },
}
`;
